# mINI

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  meson.build
src/: ini.h  meson.build
src/mini/: ini.cpp  ini.h
tests/: CMakeLists.txt  build.bat  build.sh  building.txt  clean.sh  meson.build  run.sh  runalltest.sh  test-all.bat  test-all.sh  testcasesens.cpp  testcopy.cpp  testendlcrlf.cpp  testgenerate.cpp  testgenerate_finalnewline.cpp  testhuge.cpp  testpath.cpp  testread.cpp  testutf8.cpp  testwrite.cpp  testwrite_finalnewline.cpp
tests/lest/: lest.hpp
toremove/src/mini/: ini.cpp
toremove/tests/: build.bat  testread.cpp  testwrite.cpp
